--- a/frontend/package.json
+++ b/frontend/package.json
@@ -116,6 +116,7 @@
         "react-router-redux": "^4.0.8",
         "react-select": "^2.4.4",
         "react-switch": "^3.0.4",
+        "react-vis": "^1.11.7",
         "reactstrap": "^8.0.0",
         "redux": "^4.0.1",
         "redux-actions": "^2.6.3",
